fix: batch auto publish for meta data edit

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -123,6 +123,11 @@ meta_data_batch_items_selected,Einträge selektiert,entries selected,
 meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated metadata.,
 meta_data_batch_title_post, Einträge gleichzeitig editieren, Einträge gleichzeitig editieren,
 meta_data_batch_title_pre,Metadaten für ,Metadaten für ,
+meta_data_batch_summary_all_pre,Alle ,All ,
+meta_data_batch_summary_all_post, Einträge wurden gespeichert!, entries have been saved!,
+meta_data_batch_summary_published, wurden publiziert, have been published,
+meta_data_batch_summary_were_published, waren schon publiziert, were published already,
+meta_data_batch_summary_missing, haben fehlende Meta Daten, have missing metadata,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
