--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -100,6 +100,9 @@ media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop 
 media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.","Images (TIFF, JPEG, PNG) and audio/video files in the most common formats are directly processed and displayed. Images in the CMYK color model cannot be displayed correctly, please convert them to RGB before uploading.",
 media_entry_media_import_notes_title,Hinweise,Hints,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add pictures, videos, audio file, or other documents.",
+media_entry_conversion_status_initialized,The video is converting. Please try later.,The video is converting. Please try later.,
+media_entry_conversion_status_submitted,The video is converting. Please try later.,The video is converting. Please try later.,
+media_entry_conversion_status_failed,The video conversion failed. Please contact support.,The video conversion failed. Please contact support.,
 media_entry_meta_data_header_prefix,Medieneintrag editieren: ,Edit Media Entry:,
 media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_not_published_warning_msg,Dieser Medieneintrag ist noch nicht gesichert!,Media entry is not saved yet!,
