feat: controller: batch edit permissions

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -178,6 +178,7 @@ permission_subject_title_apiapps,API-Applikationen,API Clients,
 permission_subject_title_groups,Gruppen,Groups,
 permission_subject_title_public,Öffentlichkeit,Public,
 permission_subject_title_users,Personen,Users,
+permissions_batch_success,Berechtigungen wurden erfolgreich aktualisiert.,Succesfully updated permissions.,
 permissions_overview_yours_msg_end,", haben gegenwärtig als Person oder als Mitglied einer Gruppe folgende Berechtigungen",", currently have the following permissions (either directly or as a member of a group):",
 permissions_overview_yours_msg_start,"Sie, ","You, ",
 permissions_overview_yours_title,Ihre Berechtigungen,Your Permissions,
