feat: ui: “AutoScroll” MediaResourceBox pages
tested for all cases where box is currently used:

- my/dashboard sections (/my/…)
- indexes (/entries, /sets)
- CollectionChildren (/sets/:uuid)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -160,6 +160,11 @@ no_keywords_fallback,(Keine Schlagworte vorhanden.),(No keywords available.),
 no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
 pagination_of,von,of,
 pagination_prefix,Seite,Page,
+pagination_nav_nextpage,"Vor »","Next page »",
+pagination_nav_prevpage,"« Zurück","« Previous page",
+pagination_nav_thispage,Hier,This page,
+pagination_nav_loadnext,Mehr laden,Load more,
+pagination_nav_nextloading,Lädt…,Loading…,
 people_toolbar_header,Ähnliche Inhalte,Related Resources,
 permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadata and contents,
 permission_name_edit_metadata,Metadaten editieren,Edit metadata,
