fix: media entry preview fallbacks

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -116,6 +116,9 @@ media_entry_tab_relations,Zusammenhänge,Relations,
 media_entry_upload_btn,Importieren,Upload,
 media_entry_was_disfavored,Der Medieneintrag wurde von den Favoriten entfernt.,Media entry was removed from favorites.,
 media_entry_was_favored,Der Medieneintrag wurde zu den Favoriten hinzugefügt.,Media entry was added to favorites.,
+media_entry_file_format_not_supported_1,"Your browser does most likely not support the file format, but you can ","Your browser does most likely not support the file format, but you can ",
+media_entry_file_format_not_supported_2,download the file,download the file,
+media_entry_file_format_not_supported_3,.,.,
 meta_data_action_delete_btn,Löschen,Delete,
 meta_data_action_edit_btn,Bearbeiten,Edit,
 meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Metadata could not be updated.,
