fix: show message for collection hightlight/cover when collection is empty

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -25,6 +25,7 @@ collection_edit_cover_title,Titelbild für Set festlegen,Define Set Cover,
 collection_edit_highlights_btn,Auswahl speichern,Submit,
 collection_edit_highlights_btn,Bearbeiten,Edit,
 collection_edit_highlights_title,Inhalte hervorheben,Highlight Contents,
+collection_edit_highlights_empty,Dieses Set hat noch keine Inhalte.,Dieses Set hat noch keine Inhalte.,
 collection_edit_permissions_btn,Speichern,Submit,
 collection_edit_permissions_btn,Speichern,Submit,
 collection_media_resources_title,Medieneintrag im Set:,Media Entries in Sets:,
