fix: several small things

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -101,8 +101,8 @@ media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop 
 media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Import in RGB um.","Images (TIFF, JPEG, PNG) and audio/video files in the most common formats are directly processed and displayed. Images in the CMYK color model cannot be displayed correctly, please convert them to RGB before uploading.",
 media_entry_media_import_notes_title,Hinweise,Hints,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add pictures, videos, audio file, or other documents.",
-media_entry_conversion_status_initialized,The video is converting. Please try later.,The video is converting. Please try later.,
-media_entry_conversion_status_submitted,The video is converting. Please try later.,The video is converting. Please try later.,
+media_entry_conversion_status_initialized,The media file is converting. Please try later.,The media file is converting. Please try later.,
+media_entry_conversion_status_submitted,The media file is converting. Please try later.,The media file is converting. Please try later.,
 media_entry_conversion_status_failed,The video conversion failed. Please contact support.,The video conversion failed. Please contact support.,
 media_entry_conversion_hint,"Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.","Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.",
 media_entry_conversion_reload,"Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.","Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.",
