--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -2,16 +2,16 @@ key,de,en,comment
 ,,,
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
 authentication_groups,Systemgruppen,System Groups,
-batch_add_to_collection_hint,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,Nach Sets suchen zu denen Sie die Einträge hinzufügen möchten.,
-batch_add_to_collection_post, Einträge zu Set hinzufügen, entries to set,
+batch_add_to_collection_hint,Nach Sets suchen, zu denen Sie die Medieneinträge hinzufügen möchten.,Seach for sets to add media entries.,
+batch_add_to_collection_post, Medieneinträge zu Set hinzufügen, media entries to set,
 batch_add_to_collection_pre, , Add ,
-batch_meta_data_edit,Metadaten für %{media_entry_count} Einträge gleichzeitig editieren,Edit metadata for %{media_entry_count} entries at once.,TODO_cleanup_interpolation
+batch_meta_data_edit,Metadaten für %{media_entry_count} Medieneinträge gleichzeitig editieren,Edit metadata for %{media_entry_count} media entries at once.,TODO_cleanup_interpolation
 batch_remove_from_collection_cancel,Abbrechen,Cancel,
-batch_remove_from_collection_question_part_1,Möchten Sie die ausgewählten ,Möchten Sie die ausgewählten ,
-batch_remove_from_collection_question_part_2, Medieneinträge und , Medieneinträge und ,
-batch_remove_from_collection_question_part_3, Sets aus dem Set entfernen?, Sets aus dem Set entfernen?,
+batch_remove_from_collection_question_part_1,Möchten Sie die ausgewählten ,Do you want to remove the selected ,
+batch_remove_from_collection_question_part_2, Medieneinträge und , media entries and ,
+batch_remove_from_collection_question_part_3, Sets aus dem Set entfernen?, sets from this set?,
 batch_remove_from_collection_remove,Entfernen,Remove,
-batch_remove_from_collection_title,Einträge/Sets aus Set entfernen,Remove entries/sets from sets,
+batch_remove_from_collection_title,Medieinträge/Sets aus Set entfernen,Remove media entries/sets from sets,
 btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
 btn_delete_text,Löschen,Delete,
 btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt sichern wollen?",Are you sure you want to publish this item?,
@@ -25,7 +25,7 @@ collection_edit_cover_title,Titelbild für Set festlegen,Define Set Cover,
 collection_edit_highlights_btn,Auswahl speichern,Submit,
 collection_edit_highlights_btn,Bearbeiten,Edit,
 collection_edit_highlights_empty,Dieses Set hat noch keine Inhalte.,Dieses Set hat noch keine Inhalte.,
-collection_edit_highlights_title,Inhalte hervorheben,Highlight Contents,
+collection_edit_highlights_title,Inhalte hervorheben,Highlight Items,
 collection_edit_permissions_btn,Speichern,Submit,
 collection_edit_permissions_btn,Speichern,Submit,
 collection_highlighted_contents,Hervorgehobene Inhalte,Highlighted Contents,
@@ -37,7 +37,7 @@ collection_new_flash_successful,Set wurde erstellt.,Set was created.,
 collection_new_flash_title_needed,Titel ist ein Pflichtfeld.,Title is a mandatory field.,
 collection_new_header,Neues Set,Create Set,
 collection_new_label_title,Titel,Title,
-collection_permissions_btn,Zugriffsberechtigungen ändern,Permissions,
+collection_permissions_btn,Zugriffsberechtigungen ändern,Change Permissions,
 collection_resource_selection_cancel,Abbrechen,Cancel,
 collection_resource_selection_h_author,Autor/in,Author,
 collection_resource_selection_h_date,Datierung,Dating,
@@ -79,8 +79,8 @@ login_box_login_btn,Anmelden,Log In,
 login_box_rememberme,Login merken,remember me,
 login_box_title,Digitales Areal ZHdK,Digital Area ZHdK,
 media_entry_all_metadata_title,Alle MetaDaten nach Vokabularen,All Metadata by Vocabulary,
-media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgende Eintrag löschen möchten: ",Are you sure that you want to delete the following media entry:,
-media_entry_ask_delete_title,Eintrag löschen,Delete Entry,
+media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgenden Medienintrag löschen möchten: ",Are you sure that you want to delete the following media entry:,
+media_entry_ask_delete_title,Medieneintrag löschen,Delete Media Entry,
 media_entry_back_btn,Zurück,Back,
 media_entry_conversion_hint,"Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.","Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.",
 media_entry_conversion_reload,"Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.","Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.",
@@ -95,15 +95,15 @@ media_entry_export_no_content,Sie haben keine Zugriffsrechte für die Originalda
 media_entry_export_original_hint,Download original file as it was when it was uploaded.,Download original file as it was uploaded.,
 media_entry_export_original,Original,Original,
 media_entry_export_subtitle_audios,Audios,Audios,
-media_entry_export_subtitle_documents,Dokumente,Dokumente,
-media_entry_export_subtitle_images,Bilder,Bilder,
+media_entry_export_subtitle_documents,Dokumente,Documents,
+media_entry_export_subtitle_images,Bilder,Images,
 media_entry_export_subtitle_videos,Videos,Videos,
-media_entry_export_title,Eintrag exportieren,Download Entry,
+media_entry_export_title,Medieneintrag exportieren,Download Media Entry,
 media_entry_file_format_not_supported_1,"Your browser does most likely not support the file format, but you can ","Your browser does most likely not support the file format, but you can ",
 media_entry_file_format_not_supported_2,download the file,download the file,
 media_entry_file_format_not_supported_3,.,.,
 media_entry_file_information_title,Datei,File Information,
-media_entry_media_import_gotodrafts,Gehe zu ungesicherten Medieneinträgen,Go to Drafts,
+media_entry_media_import_gotodrafts,Gehe zu aktuellen Importen,Go to Current Imports,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop files here or,
@@ -112,8 +112,8 @@ media_entry_media_import_notes_title,Hinweise,Hints,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add pictures, videos, audio file, or other documents.",
 media_entry_meta_data_header_prefix,Medieneintrag editieren: ,Edit Media Entry:,
 media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
-media_entry_not_published_warning_msg,Dieser Medieneintrag ist noch nicht gesichert!,Media entry is not saved yet!,
-media_entry_select_collection_flash_result,Eintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed entry from %{removed_count} set(s). Added entry to %{added_count} set(s).,TODO_cleanup_interpolation
+media_entry_not_published_warning_msg,Diesem Medieneintrag fehlen noch Pflichtangaben!,Media entry still needs mandatory data!,
+media_entry_select_collection_flash_result,Medieneintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed media entry from %{removed_count} set(s). Added media entry to %{added_count} set(s).,TODO_cleanup_interpolation
 media_entry_tab_main,Medieneintrag,Media Entry,
 media_entry_tab_more_data,Alle Daten,All Data,
 media_entry_tab_permissions,Berechtigungen,Permissions,
@@ -129,24 +129,24 @@ meta_data_batch_hint_differences,Unterschiedliche Metadaten vorhanden,Different 
 meta_data_batch_hint_equal_data,Gleiche Metadaten vorhanden,Same metadata in place.,
 meta_data_batch_hint_no_data,Noch keine Metadaten vorhanden,No metadata available yet.,
 meta_data_batch_hint_value,Wert und Text,Value and text,
-meta_data_batch_items_selected,Einträge selektiert,entries selected,
+meta_data_batch_items_selected,Medieneinträge selektiert,media entries selected,
 meta_data_batch_success,Metadaten wurden erfolgreich aktualisiert.,Succesfully updated metadata.,
-meta_data_batch_summary_all_post, Einträge wurden gespeichert!, entries have been saved!,
+meta_data_batch_summary_all_post, Medieneinträge wurden gespeichert., media entries have been saved.,
 meta_data_batch_summary_all_pre,Alle ,All ,
-meta_data_batch_summary_missing, haben fehlende Meta Daten, have missing metadata,
-meta_data_batch_summary_published, wurden publiziert, have been published,
-meta_data_batch_summary_were_published, waren schon publiziert, were published already,
-meta_data_batch_title_post, Einträge gleichzeitig editieren, Einträge gleichzeitig editieren,
-meta_data_batch_title_pre,Metadaten für ,Metadaten für ,
+meta_data_batch_summary_missing, haben fehlende Angaben, have missing metadata,
+meta_data_batch_summary_published, haben ausgefüllte Pflichtfelder, have mandatory data,
+meta_data_batch_summary_were_published, hatten bereits ausgefüllte Pflichtfelder, already had mandatory data,
+meta_data_batch_title_post, Medieneinträge gleichzeitig editieren, media entries at once,
+meta_data_batch_title_pre,Metadaten für ,Edit metadata for ,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_post,!,!,
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
 meta_data_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Werte löschen wollen?",Are you sure you want to delete these values?,
-meta_data_edit_collection_saved,Set wurde gespeichert.,Collection was saved.,
-meta_data_edit_media_entry_published,Eintrag wurde gespeichert und publiziert.,Entry was saved and published.,
-meta_data_edit_media_entry_saved_missing,Eintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Entry was saved but there are missing mandatory fields.,
-meta_data_edit_media_entry_saved,Eintrag wurde gespeichert.,Entry was saved.,
+meta_data_edit_collection_saved,Set wurde gespeichert.,Set was saved.,
+meta_data_edit_media_entry_published,Medieneintrag wurde gespeichert und alle Pflichtfelder sind ausgefüllt.,Media entry was saved and mandatory data is complete.,
+meta_data_edit_media_entry_saved_missing,Medieneintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Media entry was saved but there is missing mandatory data.,
+meta_data_edit_media_entry_saved,Medieneintrag wurde gespeichert.,Media entry was saved.,
 meta_data_form_cancel,Abbrechen,Cancel,
 meta_data_form_publish,Publizieren,Publish,
 meta_data_form_save,Speichern,Save,
@@ -167,7 +167,7 @@ pagination_nav_thispage,Hier,This page,
 pagination_of,von,of,
 pagination_prefix,Seite,Page,
 people_toolbar_header,Ähnliche Inhalte,Related Resources,
-permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadata and contents,
+permission_name_edit_metadata_and_relations,Metadaten editieren & Inhalte hinzufügen,Edit Metadata and add items,
 permission_name_edit_metadata,Metadaten editieren,Edit metadata,
 permission_name_edit_permissions,Zugriffsberechtigungen ändern,Edit permissions,
 permission_name_get_full_size,Original exportieren & in PDF blättern,Download original & browse PDF,
@@ -215,7 +215,7 @@ resource_select_collection_cancel,Abbrechen,Cancel,
 resource_select_collection_clear,Löschen,Clear,
 resource_select_collection_hint_more,Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche.,Additional sets were found. Please refine your search.,
 resource_select_collection_hint_search,"Suchen Sie Sets und markieren Sie diejenigen, in denen der Medieneintrag enthalten sein soll.",Search for and select sets that should hold the media entry.,
-resource_select_collection_non_assigned,Inhalt ist noch keinem Set zugewiesen.,Entry is not yet part of any set.,
+resource_select_collection_non_assigned,Inhalt ist noch keinem Set zugewiesen.,Item is not yet part of any set.,
 resource_select_collection_non_found,Zu dieser Suche wurde kein Set gefunden.,No set was found.,
 resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
@@ -226,17 +226,17 @@ resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit MetaData,
 resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
-resources_box_batch_actions_save,Als FilterSet speichern,Save as FilterSet,
+resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
 sitemap_api,API,API,
 sitemap_collections,Sets,Sets,
-sitemap_entries,Medieneinträge,Entries,
+sitemap_entries,Medieneinträge,Media Entries,
 sitemap_explore,Erkunden,Explore,
 sitemap_filter_sets,Filtersets,Filter sets,
 sitemap_help,Support,Support,
-sitemap_media_entries,Medieneinträge,Entries,
+sitemap_media_entries,Medieneinträge,Media Entries,
 sitemap_my_archive_title,Mein Archiv,My Archive,
 sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_content_collections_title,Meine Sets,My Sets,
@@ -261,8 +261,8 @@ sitemap_my_groups_title,Meine Arbeitsgruppen,My Work Groups,
 sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
 sitemap_my_latest_imports_title,Meine letzten Importe,My Latest Uploads,
 sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
-sitemap_my_unpublished_title,Meine ungesicherten Medieneinträge,My Unsaved Media Entries,
-sitemap_my_unpublished,Meine ungesicherten Medieneinträge,My unsaved media entries,
+sitemap_my_unpublished_title,Meine aktuelle Importe,My Current Uploads,
+sitemap_my_unpublished,Meine aktuelle Importe,My current uploads,
 sitemap_my_used_keywords_title,Meine Schlagworte,My Keywords,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
