--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -69,6 +69,7 @@ group_meta_data_name,Name,Name,
 group_new_form_title,Neue Arbeitsgruppe erstellen,Create Group,
 group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
+home_page_new_contents,Neue Inhalte,New Contents,
 internal_groups,Arbeitsgruppen,Work groups,
 login_box_author, ,,
 login_box_cite,Das Medienarchiv der Künste ist die Plattform der ZHdK zum gemeinschaftlichen Arbeiten mit Medien und Teilen von Inhalten.,The Media Archive of the Arts is ZHdK’s plattform for collaborative working with media.,
@@ -77,23 +78,25 @@ login_box_hint_first_line,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.
 login_box_hint_second_line, ,,
 login_box_internal,Externe,External,
 login_box_login_btn,Anmelden,Log In,
+login_box_password,Passwort,Password,
 login_box_rememberme,Login merken,remember me,
 login_box_title,Digitales Areal ZHdK,Digital Area ZHdK,
+login_box_username,Benutzername,Username,
 media_entry_all_metadata_title,Alle MetaDaten nach Vokabularen,All Metadata by Vocabulary,
 media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgenden Medienintrag löschen möchten: ",Are you sure that you want to delete the following media entry:,
 media_entry_ask_delete_title,Medieneintrag löschen,Delete Media Entry,
 media_entry_back_btn,Zurück,Back,
 media_entry_conversion_hint,"Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.","Diese Datei wird gerade für eine Vorschau konvertiert. Sobald dies abgeschlossen ist, finden Sie hier eine abspielbare Version.",
 media_entry_conversion_reload,"Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.","Laden Sie diese Seite neu, um den aktuellsten Stand zu erfahren.",
-media_entry_conversion_status_failed,The video conversion failed. Please contact support.,The video conversion failed. Please contact support.,
-media_entry_conversion_status_initialized,The media file is converting. Please try later.,The media file is converting. Please try later.,
-media_entry_conversion_status_submitted,The media file is converting. Please try later.,The media file is converting. Please try later.,
-media_entry_delete_success,Medieneintrag wurde gelöscht.,Media entry deleted.,
+media_entry_conversion_status_failed,Die Konvertierung ist fehlgeschlagen. Bitte wenden Sie sich an den Support.,The video conversion failed. Please contact support.,
+media_entry_conversion_status_initialized,Die Konvertierung läuft. Bitte versuchen Sie es später noch einmal.,The media file is converting. Please try later.,
+media_entry_conversion_status_submitted,Die Konvertierung läuft. Bitte versuchen Sie es später noch einmal.,The media file is converting. Please try later.,
+media_entry_delete_success,Der Medieneintrag wurde gelöscht.,Media entry deleted.,
 media_entry_export_close,Schliessen,Close,
 media_entry_export_download,Download,Download,
 media_entry_export_has_no_original,Sie verfügen nicht über die nötigen Berechtigung für den Download der Originaldatei.,You are not allowed to download the original file.,
 media_entry_export_no_content,Sie haben keine Zugriffsrechte für die Originaldatei und es steht keine Vorschau zur Verfügung.,You have no access to the original file and there is no preview available.,
-media_entry_export_original_hint,Download original file as it was when it was uploaded.,Download original file as it was uploaded.,
+media_entry_export_original_hint,Originaldatei herunterladen.,Download original file as it was uploaded.,
 media_entry_export_original,Original,Original,
 media_entry_export_subtitle_audios,Audios,Audios,
 media_entry_export_subtitle_documents,Dokumente,Documents,
@@ -114,7 +117,7 @@ media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente ber
 media_entry_meta_data_header_prefix,Medieneintrag editieren: ,Edit Media Entry:,
 media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_not_published_warning_msg,Diesem Medieneintrag fehlen noch Pflichtangaben!,Media entry still needs mandatory data!,
-media_entry_select_collection_flash_result,Medieneintrag aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed media entry from %{removed_count} set(s). Added media entry to %{added_count} set(s).,TODO_cleanup_interpolation
+media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Removed media entry from %{removed_count} set(s). Added media entry to %{added_count} set(s).,TODO_cleanup_interpolation
 media_entry_tab_main,Medieneintrag,Media Entry,
 media_entry_tab_more_data,Alle Daten,All Data,
 media_entry_tab_permissions,Berechtigungen,Permissions,
@@ -145,9 +148,9 @@ meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden f
 meta_data_blank_value_for_required_meta_key_pre,Metadatum-Wert nicht vorhanden für Meta-Key ,Blank metadatum value for meta key ,
 meta_data_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Werte löschen wollen?",Are you sure you want to delete these values?,
 meta_data_edit_collection_saved,Set wurde gespeichert.,Set was saved.,
-meta_data_edit_media_entry_published,Medieneintrag wurde gespeichert und alle Pflichtfelder sind ausgefüllt.,Media entry was saved and mandatory data is complete.,
-meta_data_edit_media_entry_saved_missing,Medieneintrag wurde gespeichert aber es wurden nicht alle Pflichtfelder ausgefüllt.,Media entry was saved but there is missing mandatory data.,
-meta_data_edit_media_entry_saved,Medieneintrag wurde gespeichert.,Media entry was saved.,
+meta_data_edit_media_entry_published,Der Medieneintrag wurde gespeichert und alle Pflichtfelder sind ausgefüllt.,Media entry was saved and mandatory data is complete.,
+meta_data_edit_media_entry_saved_missing,"Der Medieneintrag wurde gespeichert, aber es wurden nicht alle Pflichtfelder ausgefüllt.",Media entry was saved but there is missing mandatory data.,
+meta_data_edit_media_entry_saved,Der Medieneintrag wurde gespeichert.,Media entry was saved.,
 meta_data_form_cancel,Abbrechen,Cancel,
 meta_data_form_publish,Publizieren,Publish,
 meta_data_form_save,Speichern,Save,
@@ -266,8 +269,8 @@ sitemap_my_groups_title,Meine Arbeitsgruppen,My Work Groups,
 sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
 sitemap_my_latest_imports_title,Meine letzten Importe,My Latest Uploads,
 sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
-sitemap_my_unpublished_title,Meine aktuelle Importe,My Current Uploads,
-sitemap_my_unpublished,Meine aktuelle Importe,My current uploads,
+sitemap_my_unpublished_title,Meine aktuellen Importe,My Current Uploads,
+sitemap_my_unpublished,Meine aktuellen Importe,My current uploads,
 sitemap_my_used_keywords_title,Meine Schlagworte,My Keywords,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
