fix: ui: MetaDataForms: form, serialization
- form: put first_name before last_name
- tooltip toggle
- serialization: protect against Rack form params bug

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -156,6 +156,9 @@ meta_data_form_publish,Publizieren,Publish,
 meta_data_form_save,Speichern,Save,
 meta_data_form_submit_btn,Speichern,Submit,
 meta_data_header_text,Werte,Values,
+meta_data_input_new_bunch_add,Gruppe einfügen,Add Group,
+meta_data_input_new_person_add,Person einfügen,Add Person,
+meta_data_input_new_person_toggle,Neue Person oder Gruppe einfügen,Add new Person or Group,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Value,
@@ -285,5 +288,3 @@ workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View cont
 workgroup_members_table_is_member,Mitglied?,Member?,
 workgroup_members_table_login,Login,Login,
 workgroup_members_table_title,Mitglieder,Members,
-meta_data_input_new_person_add,Person einfügen,Add Person,
-meta_data_input_new_bunch_add,Gruppe einfügen,Add Group,
