feature: pretty collection relations view

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -52,6 +52,14 @@ collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfer
 collection_tab_main,Set,Set,
 collection_was_disfavored,Das Set wurde von den Favoriten entfernt.,Set was removed from favorites.,
 collection_was_favored,Das Set wurde zu den Favoriten hinzugefügt.,Set was added to favorites.,
+collection_relations_hint_text,"Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.","Das ausgewählte Set ist mit anderen Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet, benachbart oder untergeordnet. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.",
+collection_relations_current_set,Aktuelles Set,Current set,
+collection_relations_parent_sets,Übergeordnete Sets,Parent sets,
+collection_relations_no_parent_sets,Keine übergeordneten Sets,No parent sets,
+collection_relations_sibling_sets,Benachbarte Sets,Sibling sets,
+collection_relations_no_sibling_sets,Keine benachbarten Sets,No sibling sets,
+collection_relations_child_sets,Untergeordnete Sets,Child sets,
+collection_relations_no_child_sets,Keine untergeordneten Sets,No child sets,
 dashboard_create_collection_btn,Set erstellen,Create Set,
 dashboard_create_collection,Set erstellen,Create set,
 dashboard_create_media_entry_btn,Medien importieren,Upload Media,
