feat: ui: permissionsForm: confirm leaving
example to be used for all other forms

regardings tests: this is hard to test because
of issues between capybara and webdriver when closing windows.
It's not clear if this is a problem i general or just with our setup.
It also behaving differently locally and in CI, which makes it even harder to debug.
For this reason, all test cases *must* be in different specs,
1 is left pending because it won't work even then.

--- squashed ---

feat: ui: lib: router: #confirmNavigation

listen to all the ways a user might leave the page.
should be provided with a `check` func which checks if confirmation is needed.

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -1,5 +1,6 @@
 key,de,en,comment
 ,,,
+app_confirm_form_leave_msg,"Diese Seite bittet Sie zu bestätigen, dass Sie die Seite verlassen möchten – Daten, die Sie eingegeben haben, werden unter Umständen nicht gespeichert.","Please confirm that you want to leave this page – entered data might not be saved!","NOTE: German version copied from Firefox default message"
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
 app_warning_jsonly,"Diese Funktion erfordert JavaScript, aber es ist nicht aktiviert!","This feature needs Javascript, but it's not activated!",
 authentication_groups,Systemgruppen,System Groups,
