feature: better group edit UI

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -292,6 +292,22 @@ user_menu_admin_ui,Admin-Interface öffnen,Open Admin Interface,
 user_menu_login_btn,Anmelden,Log in,
 user_menu_logout_btn,Abmelden,Log out,
 user_menu_upload,Medien importieren,Upload Media,
+group_edit_name,Name,Name,
+group_edit_member,Mitglieder,Members,
+group_edit_person,Person,Person,
+group_edit_username,Benutzername,Username,
+group_edit_save,Speichern,Save,
+group_edit_cancel,Abbrechen,Cancel,
+group_ask_delete_title,Gruppe Löschen,Delete Group,
+group_ask_delete_question_pre,Möchten sie die Gruppe ,Would you like to delete group ,
+group_ask_delete_question_post, löschen?,?,
+group_ask_delete_delete,Löschen,Delete,
+group_ask_delete_cancel,Abbrechen,Cancel,
+group_was_deleted,Gruppe wurde gelöscht.,Group has been deleted.,
+group_edit_at_least_one_member_pre,Eine Gruppe muss mindestens eine Person enthalten. Ganze Gruppe ,Eine Gruppe muss mindestens eine Person enthalten. Ganze Gruppe ,
+group_edit_at_least_one_member_delete,löschen,löschen,
+group_edit_at_least_one_member_post,.,.,
+group_edit_hint_remove_yourself,Achtung: Sie entfernen sich selbst aus der Gruppe!,Achtung: Sie entfernen sich selbst aus der Gruppe!,
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
